# counters

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  wallets.md
counters/: __init__.py  __main__.py  bip32.py  bitcoind.py  builder.py  config.py  counterparty.py  counterwallet.py  electrum1.py  electrum2.py  envelope.py  progress.py  reveal.py  store.py  tap.py
counters/commands/: __init__.py  inscribe.py  issue.py  read.py  send.py  serve.py  wallet.py
counters/indexer/: __init__.py  indexer.py
counters/server/: __init__.py  app.py  index.html
counters/server/static/: index.html  preview.css
counters2/: __main__.py  bitcoind.py  config.py  content.py  counterparty.py
counters2/commands/: inscribe.py  issue.py  read.py  send.py  serve.py
counters2/server/: app.py  preview.py
counters2/server/static/: index.html
docs/: build-reference-v3.md
indexer/: __init__.py  __main__.py  bip32.py  bitcoind.py  builder.py  commands.py  config.py  counterparty.py  envelope.py  indexer.py  inscribe.py  progress.py  store.py  tap.py  wallet.py
tests/: test_bip32_accounts.py  test_bitcoind_auth.py  test_builder.py  test_content.py  test_counterparty.py  test_counterwallet.py  test_electrum1.py  test_electrum2.py  test_envelope.py  test_issue.py  test_pipeline.py  test_reveal.py  test_send.py  test_serve_command.py  test_server.py  test_status.py  test_tap.py  test_wallet_restore.py
