[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "counters"
version = "0.1.0"
description = "Counterparty Inscriptions (Bitcoin Counters) — CLI and indexer"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "mnemonic>=0.20",
    "ecdsa>=0.18",
]

[project.scripts]
counters = "counters.__main__:main"

[tool.setuptools.packages.find]
include = ["counters*"]

[tool.setuptools.package-data]
"counters.server" = ["static/*"]
"counters" = ["electrum1_words.txt"]
