[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "counters"
version = "0.1.0"
description = "Bitcoin Counters v3 — Counterparty taproot-envelope file-event indexer, CLI, and wallet"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "mnemonic>=0.20",
    "ecdsa>=0.18",
]

[project.scripts]
counters = "counters2.__main__:main"

[tool.setuptools.packages.find]
include = ["counters2*"]

[tool.setuptools.package-data]
"counters2.server" = ["static/*"]
"counters2" = ["electrum1_words.txt"]
